# jarvis-vol_2

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROGRESS.md  README.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  skills-lock.json
.claude/: settings.json
.codex/: config.toml
.github/: ARCHITECTURE.md  pull_request_template.md
actions/: __init__.py  browser.py  filesystem.py  keyboard_mouse.py  system.py  terminal.py
config/: __init__.py  models_config.py  settings.py
core/: __init__.py  agent.py  mcp_bus.py  planner.py  reflector.py  routed_model.py  router.py
interface/: __init__.py  api.py  api_auth.py  api_models.py  dashboard.py  session_store.py  websocket.py
mcp_servers/: __init__.py  __main__.py  base.py  fastmcp_server.py  server_browser.py  server_code.py  server_comms.py  server_filesystem.py  server_input.py  server_memory.py  server_perception.py  server_system.py  stdio_server.py
memory/: __init__.py  episodic.py  long_term.py  procedural.py  short_term.py  vault.py
models/: __init__.py  _common.py  base.py  deepseek.py  embeddings.py  gemini.py  kimi.py  litellm_adapter.py  ollama_client.py  openrouter.py
perception/: __init__.py  accessibility.py  ocr.py  screenshot.py  system_state.py  verifier.py
scripts/: first_run.py  setup_mac.sh  start_services.sh  stop_services.sh  verify_system.py
security/: __init__.py  audit_log.py  auth.py  confirmation.py  docker_sandbox.py  permission_manager.py  permissions.py  sandbox.py
skills/: __init__.py  registry.py
tests/: __init__.py  conftest.py  (+18 more)
(+77 files in other folders)
