[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jarvis"
version = "0.1.0"
requires-python = ">=3.12"
description = "Agente autónomo para macOS"

[project.optional-dependencies]
dev = [
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "e2e: tests end-to-end del sistema completo (pytest -m e2e)",
    "perf: benchmarks de rendimiento (pytest -m perf)",
]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
